@@ -278,7 +278,13 @@ public:
 	unit_type::ALIGNMENT alignment() const { return alignment_; }
 	const unit_race* race() const { return race_; }
 
-	const unit_animation* choose_animation(const game_display& disp, const map_location& loc,const std::string& event,const int damage=0,const unit_animation::hit_type hit_type = unit_animation::INVALID,const attack_type* attack=NULL,const attack_type* second_attack = NULL, int swing_num =0) const;
+	const unit_animation* choose_animation(const game_display& disp,
+		       	const map_location& loc, const std::string& event,
+		       	const map_location& second_loc = map_location::null_location,
+			const int damage=0,
+			const unit_animation::hit_type hit_type = unit_animation::INVALID,
+			const attack_type* attack=NULL,const attack_type* second_attack = NULL, 
+			int swing_num =0) const;
 
 	bool get_ability_bool(const std::string& ability, const map_location& loc) const;
 	unit_ability_list get_abilities(const std::string& ability, const map_location& loc) const;
