@@ -13,6 +13,8 @@ Version 1.7.0-svn:
    * The ~RC() image functor does not accept the special palette switch
      ~RC(palette1=palette2) syntax anymore. ~PAL(palette1>palette2) should
      be used instead
+   * New type of animation : "recruiting" used by leaders when recruiting
+   units
    * New portrait for Orc Grunt, Dwarf Fighter (alternative), Goblin Spearman
      Ogre/Young Ogre, Trapper
  * Language and i18n:
